# nerva-ai

./: Cargo.toml  history.txt
.sqlx/: query-4c2d91450a6057f42c86901c5310a938021fdf20638e5f4c38773c35260eddf6.json  query-c3e7fa0e98d49990fb3c0ecb551b3c1c356c66026656bce533776829d0f26950.json
migrations/: 202504050000_init.sql
src/: api.rs  config.rs  main.rs
src/ai/: deepseek.rs
src/db/: mod.rs  models.rs  queries.rs
